--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.1",
     "core-js": "^3.6.5",
     "sweetalert2": "^11.1.7",
